# dabeacon_indexer

./: .dockerignore  .env.test.example  .gitignore  Cargo.toml  Dockerfile  README.md  config.example.toml  docker-compose.test.yml  docker-compose.yml
.github/workflows/: ci.yml  release.yml  test.yml
migrations/: 001_initial.sql
scripts/: probe-state-retention.sh  run-integration-tests.sh
src/: backfill.rs  chain.rs  config.rs  error.rs  exits.rs  live_updates.rs  main.rs  metrics.rs  validators_update.rs
src/beacon_client/: blocks.rs  committees.rs  duties.rs  mod.rs  rewards.rs  spec.rs  types.rs  validators.rs
src/db/: mod.rs
src/db/api/: attestations.rs  epochs.rs  live.rs  mod.rs  proposals.rs  rewards.rs  stats.rs  sync.rs  validators.rs
src/db/scanner/: attestations.rs  finalization.rs  instance.rs  mod.rs  proposals.rs  sync.rs  validators.rs
src/live/: finalization.rs  head.rs  mod.rs  reorg.rs
src/scanner/: bits.rs  mod.rs  proposals.rs  sync_committee.rs
src/scanner/attestations/: decode.rs  dense.rs  integration_tests.rs  mod.rs  sparse.rs
src/web/: live_sse.rs  mod.rs
src/web/api/: attestations.rs  common.rs  epochs.rs  meta.rs  mod.rs  proposals.rs  rewards.rs  stats.rs  sync_duties.rs  validators.rs
testdata/blocks/: altair.json  bellatrix.json  capella.json  deneb.json  electra.json  fulu.json  phase0.json
web/: README.md  package-lock.json  package.json
web/src/: app.html
web/src/lib/: RangeInput.svelte  ValidatorPicker.svelte  api.ts  ui.ts
web/src/routes/: +layout.svelte  +page.svelte
(+6 files in other folders)
