[package]
name = "dabeacon_indexer"
version = "0.2.0"
edition = "2024"
description = "Ethereum validator indexer for the consensus (beacon) layer. Tracks per-epoch attestation, proposal, and sync-committee outcomes + rewards into Postgres, with a web UI, JSON API, and live SSE stream."
authors = ["DAppNode <admin@dappnode.io>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/dappnode/dabeacon_indexer"
homepage = "https://github.com/dappnode/dabeacon_indexer"
readme = "README.md"
keywords = ["ethereum", "beacon", "validator", "indexer", "consensus"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies"]

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
hex = "0.4"
lru = "0.18"
once_cell = "1"
openssl = { version = "0.10", features = ["vendored"] }
prometheus = "0.14"
reqwest = { version = "0.12", features = ["json", "gzip", "rustls-tls"] }
reqwest-eventsource = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate", "uuid"] }
thiserror = "2.0"
tokio = { version = "1.52", features = ["full"] }
toml = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
